--- a/src/main/resources/templates/customer-template/don-mua.html
+++ b/src/main/resources/templates/customer-template/don-mua.html
@@ -348,7 +348,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-md-2 d-flex align-items-center justify-content-center">
-                                                        <span th:text="${listHoaDonCT.donGia + ' VND'}"></span>
+                                                        <span th:text="${listHoaDonCT.donGia + ' VNĐ'}"></span>
                                                     </div>
                                                     <div class="border-duoi"></div>
                                                 </div>
@@ -362,8 +362,8 @@
                                                 <div class="col-md-12">
                                                     <div class="divider-line">
                                                         <h6>Thành tiền:</h6>
-                                                        <h5 th:if="${allHoaDon.trangThai!=6}" th:text="${ allHoaDon.tongTienHoaDonDaNhan() + allHoaDon.phiShip - allHoaDon.tienGiam + ' VND'}"></h5>
-                                                        <h5 th:if="${allHoaDon.trangThai==6}" th:text="${allHoaDon.tongTienHoaDon() + allHoaDon.phiShip + ' VND'}"></h5>
+                                                        <h5 th:if="${allHoaDon.trangThai!=6}" th:text="${ allHoaDon.tongTienHoaDonDaNhan() + allHoaDon.phiShip - allHoaDon.tienGiam + ' VNĐ'}"></h5>
+                                                        <h5 th:if="${allHoaDon.trangThai==6}" th:text="${allHoaDon.tongTienHoaDon() + allHoaDon.phiShip + ' VNĐ'}"></h5>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12">
@@ -727,7 +727,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-md-2 d-flex align-items-center justify-content-center">
-                                                        <span th:text="${listHoaDonCT.donGia + ' VND'}"></span>
+                                                        <span th:text="${listHoaDonCT.donGia + ' VNĐ'}"></span>
                                                     </div>
                                                     <div class="border-duoi"></div>
                                                 </div>
@@ -738,8 +738,8 @@
                                                 <div class="col-md-12">
                                                     <div class="divider-line">
                                                         <h6>Thành tiền:</h6>
-                                                        <h5 th:if="${allHoaDon.trangThai!=6}" th:text="${ allHoaDon.tongTienHoaDonDaNhan() + allHoaDon.phiShip - allHoaDon.tienGiam + ' VND'}"></h5>
-                                                        <h5 th:if="${allHoaDon.trangThai==6}" th:text="${allHoaDon.tongTienHoaDon() + allHoaDon.phiShip + ' VND'}"></h5>
+                                                        <h5 th:if="${allHoaDon.trangThai!=6}" th:text="${ allHoaDon.tongTienHoaDonDaNhan() + allHoaDon.phiShip - allHoaDon.tienGiam + ' VNĐ'}"></h5>
+                                                        <h5 th:if="${allHoaDon.trangThai==6}" th:text="${allHoaDon.tongTienHoaDon() + allHoaDon.phiShip + ' VNĐ'}"></h5>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12">
@@ -895,7 +895,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-md-2 d-flex align-items-center justify-content-center">
-                                                        <span th:text="${listHoaDonCT.donGia + ' VND'}"></span>
+                                                        <span th:text="${listHoaDonCT.donGia + ' VNĐ'}"></span>
                                                     </div>
                                                     <div class="border-duoi"></div>
                                                 </div>
@@ -906,8 +906,8 @@
                                                 <div class="col-md-12">
                                                     <div class="divider-line">
                                                         <h6>Thành tiền:</h6>
-                                                        <h5 th:if="${allHoaDon.trangThai!=6}" th:text="${ allHoaDon.tongTienHoaDonDaNhan() + allHoaDon.phiShip - allHoaDon.tienGiam + ' VND'}"></h5>
-                                                        <h5 th:if="${allHoaDon.trangThai==6}" th:text="${allHoaDon.tongTienHoaDon() + allHoaDon.phiShip + ' VND'}"></h5>                                                    </div>
+                                                        <h5 th:if="${allHoaDon.trangThai!=6}" th:text="${ allHoaDon.tongTienHoaDonDaNhan() + allHoaDon.phiShip - allHoaDon.tienGiam + ' VNĐ'}"></h5>
+                                                        <h5 th:if="${allHoaDon.trangThai==6}" th:text="${allHoaDon.tongTienHoaDon() + allHoaDon.phiShip + ' VNĐ'}"></h5>                                                    </div>
                                                 </div>
                                                 <div class="col-md-12">
                                                     <div class="divider-line1">
@@ -1062,7 +1062,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-md-2 d-flex align-items-center justify-content-center">
-                                                        <span th:text="${listHoaDonCT.donGia + ' VND'}"></span>
+                                                        <span th:text="${listHoaDonCT.donGia + ' VNĐ'}"></span>
                                                     </div>
                                                     <div class="border-duoi"></div>
                                                 </div>
